<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.barclaycardus</groupId>
	<version>1.0.0-revision-SNAPSHOT</version>
	<artifactId>ccd-webui-tests</artifactId>
	<packaging>war</packaging>
	<name>Consumer Lending - UI Tests</name>
	<properties>
		<revision-version-clfixture>1.0.0-revision-SNAPSHOT</revision-version-clfixture>
		<cucumber.version>1.2.0</cucumber.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<desktop.skipTests>${skipTests}</desktop.skipTests>
		<level1.dev>level1-smoke</level1.dev>
		<level2.dev>level2-DONTUSE</level2.dev>
		<level2dev.dev>level2-dev</level2dev.dev>
		<level1.dev01>level1-smoke</level1.dev01>
		<level1.qa>vanityurl</level1.qa>
		<level2.qa>vanityurl</level2.qa>
		<!-- CURRENTLY CONFIGURED ONLY BELOW TAG -->
		<level3.qa>level3-DONTUSE</level3.qa>
		<level3dev.dev>level3-dev</level3dev.dev>
		<level3dev.SocialMedia>level3-dev-socialmedialinks</level3dev.SocialMedia>
		<level3dev.kasthuri>level3-dev-kasthuri</level3dev.kasthuri>
		<level3dev.kasthuri1>level3-profile</level3dev.kasthuri1>
		<level3dev.kasthuri2>level3-mowrewards</level3dev.kasthuri2>
		<level3dev.kasthuri3>level3-dev-kasthuri3</level3dev.kasthuri3>
		<level3dev.kasthuri4>level3-dev-kasthuri4</level3dev.kasthuri4>
		<level3dev.pune>level3-dev-pune</level3dev.pune>
		<level2dev.pune>level2-dev-pune</level2dev.pune>
		<orionlevel3dev.pune>teamenigma-level3-pune</orionlevel3dev.pune>
		<orionlevel3dev.pune>teamenigma-level2-pune</orionlevel3dev.pune>
		<orionlevel3dev.pune>teamorion-level3-pune</orionlevel3dev.pune>
		<orionlevel2dev.pune>teamorion-level2-pune</orionlevel2dev.pune>
		<eurekalevel3dev.pune>teameureka-level3-pune</eurekalevel3dev.pune>
		<eurekalevel2dev.pune>teameureka-level2-pune</eurekalevel2dev.pune>
		<level3.qa.payment>level3-payments</level3.qa.payment>
		<level3.socialmedia>level3-socialmedialinks</level3.socialmedia>
		<level4.qa>level4-DONTUSE</level4.qa>
		<shell.skip>false</shell.skip>
		<test.classpath>${project.build.directory}/lib/</test.classpath>
		<testreport.video>${project.build.directory}/testReport</testreport.video>
		<testreport.json>${project.build.directory}/testReport/cukes-json-report.json</testreport.json>
		<testreport.junit>${project.build.directory}/testReport/cukes-junit-report.xml</testreport.junit>
		<testreport.html>${project.build.directory}/testReport/cukes-html-report</testreport.html>
		<cukes.glue.path>com.barclaycardus.stepdefs classpath:features/</cukes.glue.path>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.surefire.argline>-Xmx756m -Xms256m -XX:PermSize=256m
			-XX:MaxPermSize=512m</maven.surefire.argline>
			<testreport.video.coversion>N</testreport.video.coversion>
	</properties>
	<dependencies>
	 <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.3.5</version>
   </dependency>
		
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
	      <groupId>com.barclaycardus.svc.customer</groupId>
	      <artifactId>customer-service-schema</artifactId>
	      <version>50.0.0-65897</version>
	      <type>jar</type>
    	</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>${cucumber.version}</version>
		</dependency>
		<dependency>
		      <groupId>com.barclaycardus.svc.rules-service</groupId>
		      <artifactId>rules-service-schema</artifactId>
		      <version>52.0.0-82338</version>
		      <type>jar</type>
    	</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>1.1.3</version>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>maven-cucumber-reporting</artifactId>
			<version>0.0.8</version>

			<exclusions>
				<exclusion>
					<artifactId>totallylazy</artifactId>
					<groupId>com.googlecode.totallylazy</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>0.0.23</version>

			<exclusions>
				<exclusion>
					<artifactId>totallylazy</artifactId>
					<groupId>com.googlecode.totallylazy</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.googlecode.totallylazy</groupId>
			<artifactId>totallylazy</artifactId>
			<version>1.20</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-maven-plugin</artifactId>
			<version>8.1.16.v20140903</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlets</artifactId>
			<version>8.1.6.v20120903</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>6.1.26</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>3.2.0.RELEASE</version>
		</dependency>
		<dependency>
                     <groupId>com.barclaycardus</groupId>
                     <artifactId>bcus-uiframework</artifactId>
                     <version>1.0.0-revision-SNAPSHOT</version>
              </dependency>
		
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>2.4.4</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>2.4.4</version>
        </dependency>
		<dependency>
			<groupId>com.barclaycardus.svc.self-service-channel-authentication-service</groupId>
			<artifactId>self-service-channel-authentication-service-schema</artifactId>
			<version>49.0.0-82394</version>
			<type>jar</type>
		</dependency>

        <!--Added for Jayway Restassured-->
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>2.3.2</version>
        </dependency>

        <!--END-->
        

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>add-integration-test-source-as-test-sources</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/it/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${test.classpath}</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
					<execution>
						<id>unpack</id>
						<phase>compile</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>com.barclaycardus</groupId>
									<artifactId>bcus-uiframework-drivers</artifactId>
									<version>1.0.0-release-beta</version>
									<type>jar</type>
									<overWrite>true</overWrite>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<includes>**/*.exe,**/*.html,**/*.js,**/chromedriver.*,**/*.plist,**/chromedriver*</includes>
									<excludes>**/*.class</excludes>
									<excludes>**/*pom.xml</excludes>
									<excludes>**/*.xml</excludes>
								</artifactItem>
							</artifactItems>
						</configuration>
						
					</execution>
					
				</executions>
			</plugin>
			<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.6</version>
            <configuration>
                <failOnMissingWebXml>false</failOnMissingWebXml>
            </configuration>
        </plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<fork>false</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
				<excludes>
            		<exclude>${path}</exclude>
            		
          		</excludes>
				<skipTests>false</skipTests>
					<systemPropertyVariables>
						<browsername>chrome</browsername>>
						<webdriver.chrome.driver>target/driver/win/chromedriver.exe</webdriver.chrome.driver>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>cucumber-jvm-example</projectName>
							<outputDirectory>${testreport.html}</outputDirectory>
							<cucumberOutput>${testreport.json}</cucumberOutput>
							<enableFlashCharts>false</enableFlashCharts>
							<dependencies>
								<dependency>
									<groupId>net.masterthought</groupId>
									<artifactId>cucumber-reporting</artifactId>
									<version>0.1.0</version>
								</dependency>
							</dependencies>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.4,)
										</versionRange>
										<goals>
											<goal>
												copy-dependencies
											</goal>
											<goal>unpack</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
</project>